app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@custom-variant dark (&:where(.dark, .dark *));

@layer utilities {
    .form-error {
        @apply text-red-600 bg-red-300 p-4 mb-4
    }


    .dialog-btn-primary {@apply  bg-gray-500 hover:bg-gray-400 mt-8 px-3 py-1.5 rounded-md border border-gray-800 }
    

    .dialog-input {@apply block w-full rounded-md bg-gray-300 text-base  px-3 py-1.5 text-stone-800 outline outline-1 -outline-offset-1 outline-gray-300  focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-blue-400}

    .library-core-node {
        background-color: hotpink;
    }

    .basic-node {
        position: absolute;
        top: 0;
        left: 0;
        background-color: hotpink;
        height: 60px;
        width: 60px;
        cursor: pointer;
        user-select: none;
      }

      .position {
        top: 45%;
        left: 45%;
      }


      .url-node {
        position: absolute;
        top: 0;
        left: 0;
        background-color: blueviolet;
        height: 120px;
        width: 120px;
        border-radius: 50%;
        cursor: pointer;
      }

      .hub-node {
        position: absolute;
        top: 0;
        left: 0;
        background-color: red;
        height: 60px;
        width: 60px;
        border-radius: 50%;
        cursor: pointer;
      }

      .draggable {
        position: absolute;
        z-index: 9;
        cursor: move;
        touch-action: none;
    }

    .drag-handle {
      cursor: move;
      z-index: 10;
  }

  .connection {
    position: absolute;
    stroke:rgb(186,230,253);
    stroke-width:2;
    /* z-index: 8; */
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }

  .default-line {
    stroke-width: 2;
    stroke-color: oklch(90.1% 0.058 230.902)
  }

  .selected-line {
    stroke-width: 10;
    stroke-color: oklch(98.7% 0.026 102.212)
  }

    .input-connection {
      position: absolute;
        top: -10px;
        left: -10px;
        background-color:  #2563EB;
        height: 80px;
        width: 80px;
        border-radius: 50%;
        cursor: pointer;
        z-index: 8;
    }

    .output-connection {
      position: absolute;
        top: 50%;
        left: 100%;
        background-color: red;
        height: 110px;
        width: 110px;
        border-radius: 50%;
        cursor: pointer;
    }

    #frame_area {
	    border:1px #99CCFF solid;
	    background: rgba(153, 204, 255, 0.5);
	    position: absolute;
	    
	    z-index:10;
	}
   

}

